fix: reduces excessive title  margin on mobile

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
         font-size: 300%;
     
         margin-bottom: 5px;
-        margin-top: 40px;
+        margin-top: 20px;
     }
 
     .icons_container
